--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!-- Created By CodingNepal -->
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Somehow I got an error, so I comment the title, just uncomment to show -->
+   
     <!-- <title>Personal Portfolio Website</title> -->
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
@@ -70,7 +69,7 @@
                         I'm Vishal and I'm a Software <span class="typing-2"></span></div>
                     <p>
                         Experienced software engineer skilled in full-stack development (.NET & Angular) with a passion for delivering high-quality code and exceptional user experiences. Seeking challenging opportunities to leverage expertise, drive innovation, and contribute to cutting-edge software projects.</p>
-                    <a href="Final vishal resume.pdf">Download CV</a>
+                    <a href="#">Download CV</a>
                 </div>
             </div>
         </div>
